# 2ViewBundleAdjustment

./: .gitignore  CMakeLists.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
3d_sample_data_set_sofa/: gcp calc sofa.txt
include/: control_points.cpp  control_points.hpp  correspondences.cpp  correspondences.hpp  ls_solver.cpp  ls_solver.hpp  preprocess.cpp  preprocess.hpp
src/: main.cpp  random.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
